styled search box, fix text and input spacing

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -109,7 +109,7 @@ nav {
 
 .landingText {
   text-align: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1.25rem;
 }
 
 footer {
@@ -146,9 +146,18 @@ footer {
 
 /* search */
 
+.searchWrapper {
+  display: flex;
+}
+
 .searchWrapper input {
   margin-right: 0.2rem;
   width: 300px;
+  padding: 0 0.5rem;
+  background-color: rgb(44, 44, 44);
+  color: var(--white);
+  border: 1px solid transparent;
+  border-radius: 4px;
 }
 
 /* reg/login forms */
@@ -178,12 +187,12 @@ form input {
   background-color: rgb(44, 44, 44);
   border-radius: 4px;
   border: 1px solid transparent;
-  margin-bottom: 1.5rem;
+  margin-bottom: 1rem;
   color: var(--priWhite);
 }
 
 input::placeholder {
-  color: rgb(161, 161, 161);
+  color: rgb(98, 98, 98);
 }
 
 .passwordInputCtn {
@@ -206,7 +215,7 @@ form p {
   font-size: 0.8rem;
   text-align: center;
   font-weight: 400;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.25rem;
 }
 
 .eyeIcon {
